--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@ body{
     padding: 20px;
     width: 500px;
     background-color: #efefef;
-    margin: 0 auto 0 auto;
+    margin: 10px auto 10px auto;
 }
 ul{
     background-color: white;
